res/examples/invalid/call_non_callable_undefined_identifier.eg
sum(1, 2);

// out: TypeError: `sum` is not defined